BS-12672 : Fixing UI issues 1. UI alignment has been fixed 2. Dirty check has been implemented 3. Minimum value to display start days and end days offset to 0

--- a/web-app/aipApp/admin/action/post/_adminPostItemAddPage.scss
+++ b/web-app/aipApp/admin/action/post/_adminPostItemAddPage.scss
@@ -1,4 +1,7 @@
 .actionItemAddContainer {
+  .actionItemScheduleType{
+    padding-left:8px;
+  }
   input.hasMultiCalendarPicker
   {
     width:170px;
@@ -26,7 +29,9 @@
 {
   width: 280px;
 }
-
+  #recurFrequency{
+    width:10em;
+  }
   #timezoneid .ui-select-dropdown .select2-search input {
     width:270px !important;
   }
@@ -118,15 +123,16 @@
     background: white;
     width: 19px;
     height: 19px;
-    border: 1px solid #a4a4ca;
+    border: 1px solid  #0074DB;
     background: white;
     position: relative;
     border-radius: 15px;
     vertical-align: -40%;
     box-shadow: inset 0 2px 5px rgba(0,0,0,0.25);
+    margin-right: 20px;
   }
   input[type="radio"]:checked {
-    background: #1c8445;
+    background: #0074DB;
   }
   input[type="radio"]:checked:after {
     /* Heres your symbol replacement - this is a tick in Unicode. */
@@ -193,6 +199,17 @@
     -ms-transform: rotate(-0deg);
     transform: rotate(-0deg);
   }*/
+//commnet
+  input[type="number"] {
+    -moz-appearance:textfield;
+  }
+  /* Webkit browsers like Safari and Chrome */
+  input[type="number"]::-webkit-inner-spin-button,
+
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 .postChk{
   font-size: 1.5em;
   font-weight: bold;
@@ -301,8 +318,14 @@
     font-family: "OpenSans-semibold";
     color: darkSlateGray;
   }
+
   .timeZoneChange{
     padding-left:0px;
     padding-right:0px;
   }
+
+  .row .actionItemInfoRow .actionItemScheduleType{
+     padding-left : 8px;
+
+   }
 }
